--- a/README
+++ b/README
@@ -1,3 +1,17 @@
 A Nike+ Data Importer, used to import data from their website into a .NET Project. 
 
+This is based on a code written by Francois Duchemin, for the product RunningTracker.
+
 Written in C#, using .NET 4.0
+
+Copyright (C) 2011 Matt Blair
+
+This code is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+ 
+This code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
