Added a reference to NUnit, so that the tests can be run under NUnit or MSTest. Added an example.txt file containing example xml. All the basis data should be returned from the Nike+ website with this version.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 A Nike+ Data Importer, used to import data from their website into a .NET Project. 
 
-My thanks go out to Francois Duchemin, for the product RunningTracker. It was the inspiration for this tool.
+My thanks go out: Francois Duchemin, for the product RunningTracker. It was the inspiration for this tool.
 
 Written in C#, using .NET 4.0
 
